--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,9 +1,9 @@
 Bug fixes:
-1. still some of the components are not translated correctly for example: 制作机箱零件 该零件当前没有定义任何连接点。
-2. when right panel pop up or disappear, the main gride would jump left or right. that's bad expreience.
-3. pc part: box is not needed
-4. GPU bottom clearence is not right, too low
-5. after introduce panel hide, assembly is not working
+1. X still some of the components are not translated correctly for example: 制作机箱零件 该零件当前没有定义任何连接点。
+2. X when right panel pop up or disappear, the main gride would jump left or right. that's bad expreience.
+3. O pc part: box is not needed
+4. O GPU bottom clearence is not right, too low
+5. X after introduce panel hide, assembly is not working
 6. 
 
 
