--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -24,7 +24,7 @@ Main features:
 2. 现在的问题是drill的位置完全靠视觉来选择，这样孔的位置会不规范/统一。理论上，孔应该总是在零件的中心。加入我们交叉固定两个零件
     那么孔的位置应该总是在另一个零件的中心。我们需要设计一个机制，来自动选择孔的位置。
 
-[FUTURE] Standoff Generator:
+[Done] Standoff Generator:
 - Design: "Volcano" shape (conical base) for 3D printing strength.
 - Integration: Printed directly on the beam/tray (merged geometry).
 - Logic: Project motherboard holes to underlying parts. 
