--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,5 +1,14 @@
-nice. now let's fix another issue: 1. after selection 2 or more parts, there should be a group button in the right sidebar.  
-the behavior should be: 
-0. if select 1 part, show name/type/id/transform/appearance/action buttons(copy/delete/hide/hide others we don't have this yet.)/connector buttons
-1. if select 2 parts show item list (already there) and connection/subtract/group buttons/action buttons(delete/hide)
-2. if select more than 2 parts, show item list,group button/group buttons/action buttons(delete/hide)
+1. half lap joint for long beams that don't fit 3d printer. we need to cut the beam into 2 parts and connect them with a half lap joint. 
+  1.1 so first we need to introduce cut operation
+  1.2 then introduce half lap joint
+  1.3 we already have screw functionality, we can reuse it
+  1.4 we need to introduce nut (like hex nut)
+
+2. Due to limited dimensional accuracy in 3D printing, parts designed with zero clearance will result in an interference fit and won’t assemble properly.
+  2.1 this need to be fixed for mortise and tenon joint and cross joint 
+  2.2 the clearance should be configurable default value is 0.1mm
+
+3. we need to make parts on motherboard and graphics card can be configurable
+    3.1 io cut out on motherboard: position and size should be configurable
+    3.2 size the graphics card should be configurable
+    3.3 io bracket on graphics card: position and size should be configurable
