refactor dimension definition and fix GPU bracket shape.

--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,19 +1,3 @@
-0. introduce cut operation. interaction should be like:
-  0.1 click cut button on the topbar
-  0.2 define a face to cut. we can show a thin plane and let user to rotate it to define the face.
-  0.3 selection one or more objects to cut
-  0.4 click cut button to cut
-
-1. half lap joint for long beams that don't fit 3d printer. we need to cut the beam into 2 parts and connect them with a half lap joint. 
-  1.1 so first we need to reuse split operation
-  1.2 then introduce half lap joint
-  1.3 we already have screw functionality, we can reuse it
-  1.4 we need to introduce nut (like hex nut)
-
-2. Due to limited dimensional accuracy in 3D printing, parts designed with zero clearance will result in an interference fit and won’t assemble properly.
-  2.1 this need to be fixed for mortise and tenon joint and cross joint 
-  2.2 the clearance should be configurable default value is 0.1mm
-
 3. we need to make parts on motherboard and graphics card can be configurable
     3.1 io cut out on motherboard: position and size should be configurable
     3.2 size the graphics card should be configurable
@@ -29,9 +13,32 @@
 
 7. database
 
-8. login
+8. login 
 
 9. domain
 
 10. server
  
+
+ 关于ATX标准（准确地说是PCI Express Card Electromechanical (CEM) Specification）中显卡挡板（Bracket）位置的定义，主要包含以下几个关键尺寸：
+
+水平定位（关键基准）：
+标准定义了一个固定距离：从挡板的安装面（即机箱后板平面）到PCIe金手指上的**防呆缺口（Key Notch）**的中心距离为 57.15mm (2.25英寸)。
+这是最重要的定位尺寸，确保了无论显卡多长，插入插槽时挡板都能准确贴合机箱。
+代码中的对应关系：
+在我们的 
+src/utils/presets.js
+ 文件中，目前使用了一个近似值 fingerOffsetFromBracket: 42 (第264行)。
+推导逻辑：PCIe x16插槽的防呆缺口位于第11和12针脚之间。从金手指起始端（Pin 1）到缺口中心的距离大约是 11.65mm 左右（11个针脚间距 + 缺口偏移）。
+因此，从挡板到金手指起始端的理论距离应该是：57.15mm - 11.65mm ≈ 45.5mm。
+目前的 42mm 是一个简化值，可能包含了PCB边缘到挡板内侧的一些机械公差或结构厚度。
+垂直定位：
+挡板的底部（插入机箱缝隙的舌头部分）通常作为垂直方向的参考基准。
+PCIe插槽的顶面通常定义在主板表面上方一定高度（如 
+presets.js
+ 中定义的 slotHeightMm: 11）。
+如果您希望我们的模型更加精确地符合工业标准，我们可以将 fingerOffsetFromBracket 的值调整为更接近 45.5mm，或者在代码中明确备注这个 57.15mm 的标准来源。
+
+需要我为您调整 
+presets.js
+ 中的这个参数吗？
